# Your_Vacan-y_Parser

./: main.py  pyproject.toml  readme.md
cache_json/: cache_hh.json  cache_sj.json
src/: abstract_class_api.py  vacancy.py
src/data_json/: work_with_json.py
src/request/: hh.py  sj.py
